# singlefile

./: Cargo.toml  LICENSE-APACHE  README.md
singlefile/: Cargo.toml  README.md
singlefile-formats/: Cargo.toml  README.md
singlefile-formats/src/: compression.rs  data.rs  lib.rs  utils_serde.rs
singlefile-formats/src/compression/: bzip.rs  flate.rs  xz.rs
singlefile-formats/src/data/: base64.rs  bincode.rs  bincode_reloaded.rs  cbor_serde.rs  json_serde.rs  ron_serde.rs  toml_serde.rs
singlefile/examples/: basic.rs
singlefile/src/: container.rs  container_shared.rs  container_shared_async.rs  error.rs  format.rs  fs.rs  lib.rs  manager.rs  utils.rs
singlefile/src/container_shared/: guards.rs
singlefile/src/container_shared_async/: guards.rs
singlefile/src/manager/: atomic.rs  format.rs  lock.rs  mode.rs  standard.rs
singlefile/src/manager/format/: default_formats.rs
singlefile/tests/: containers.rs  main.rs
src/: backend.rs  backend_shared.rs  backend_tokio.rs  container.rs  container_shared.rs  container_shared_async.rs  container_tokio.rs  error.rs  lib.rs  manager.rs
src/manager/: format.rs  lock.rs  mode.rs
src/manager/format/: default_formats.rs
