[package]
name = "singlefile"
version = "0.4.0"
authors = ["ScottyThePilot <scotty.codes@gmail.com>"]
edition = "2021"

[dependencies]
fs4 = "0.6"
serde = "1.0"
thiserror = "1.0"

[dependencies.parking_lot]
version = "0.12"
optional = true

[dependencies.tokio]
version = "1"
features = ["rt", "sync"]
optional = true

[features]
default = ["shared", "shared-async"]
shared = ["dep:parking_lot"]
shared-async = ["dep:tokio"]
tokio = ["shared-async"] # deprecated
