[package]
name = "singlefile"
version = "0.5.0"
authors = ["ScottyThePilot <scotty.codes@gmail.com>"]
edition = "2021"

[dependencies]
fs4 = "0.6"
thiserror = "1.0"

[dependencies.parking_lot]
version = "0.12"
optional = true

[dependencies.tokio]
version = "1"
features = ["rt", "sync"]
optional = true

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.3"

[features]
default = []
shared = ["parking_lot"]
shared-async = ["tokio"]

[package.metadata.docs.rs]
all-features = true
