[package]
name = "singlefile-formats"
version = "0.2.1"
authors = ["ScottyThePilot <scotty.codes@gmail.com>"]
description = "Default file format implementations for singlefile."
documentation = "https://docs.rs/singlefile-formats"
repository = "https://github.com/ScottyThePilot/singlefile"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.65"

[dependencies]
bzip2 = { version = "0.4.4", optional = true }
ciborium = { version = "0.2.1", optional = true }
flate2 = { version = "1.0.28", optional = true }
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }
toml = { version = "0.8.8", optional = true }
xz2 = { version = "0.1.7", optional = true }

[dependencies.singlefile]
path = "../singlefile"
version = "0.2.1"

[dependencies.thiserror]
version = "1.0"

[features]
default = []
# formats
cbor-serde = ["dep:ciborium", "dep:serde"]
json-serde = ["dep:serde_json", "dep:serde"]
toml-serde = ["dep:toml", "dep:serde"]
# compression
bzip = ["dep:bzip2"]
flate = ["dep:flate2"]
xz = ["dep:xz2"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
