[package]
name = "singlefile-formats"
version = "0.3.0"
authors = ["ScottyThePilot <scotty.codes@gmail.com>"]
description = "Default file format implementations for singlefile."
documentation = "https://docs.rs/singlefile-formats"
repository = "https://github.com/ScottyThePilot/singlefile"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.65"

[dependencies]
base64 = { version = "0.22.1", optional = true }
bincode = { version = "2.0.1", optional = true }
bzip2 = { version = "0.5.2", optional = true }
ciborium = { version = "0.2.2", optional = true }
flate2 = { version = "1.1", optional = true }
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }
toml = { version = "0.8.21", optional = true }
xz2 = { version = "0.1.7", optional = true }

[dependencies.singlefile]
path = "../singlefile"
version = "0.3.0"

[dependencies.thiserror]
version = "1.0"

[features]
default = ["compression"]
compression = []
# data formats
base64 = ["dep:base64"]
bincode = ["dep:bincode"]
cbor-serde = ["dep:ciborium", "dep:serde"]
json-serde = ["dep:serde_json", "dep:serde"]
toml-serde = ["dep:toml", "dep:serde"]
# compression formats
bzip = ["compression", "dep:bzip2"]
bzip_rust = ["bzip", "bzip2/libbz2-rs-sys"]
flate = ["compression", "dep:flate2"]
xz = ["compression", "dep:xz2"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
