[package]
name = "singlefile-formats"
version = "0.5.0"
authors = ["ScottyThePilot <scotty.codes@gmail.com>"]
description = "Default file format implementations for singlefile."
documentation = "https://docs.rs/singlefile-formats"
repository = "https://github.com/ScottyThePilot/singlefile"
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.88"

[dependencies]
base64 = { version = "0.22.1", optional = true }
bincode = { version = "=2.0.1", default-features = false, features = ["std"], optional = true }
bincode_reloaded = { version = "3.1.2", default-features = false, features = ["std"], optional = true }
bzip2 = { version = "0.6.1", optional = true }
ciborium = { version = "0.2.2", optional = true }
flate2 = { version = "1.1.9", optional = true }
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }
toml = { version = "1.1.2", optional = true }
xz2 = { version = "0.1.7", optional = true }

[dependencies.singlefile]
path = "../singlefile"
version = "0.5.0"
# don't use default features, because anyone depending on
# `singlefile-formats` will then be forced to have them
default-features = false

[dependencies.thiserror]
version = "2.0"

[features]
default = ["compression"]
compression = []
utils-serde = ["dep:serde"]

# data formats
base64 = ["dep:base64"]
bincode = ["dep:bincode"]
bincode-serde = ["bincode", "dep:serde", "bincode/serde"]
bincode-reloaded = ["dep:bincode_reloaded"]
bincode-reloaded-serde = ["bincode-reloaded", "dep:serde", "bincode_reloaded/serde"]
cbor-serde = ["dep:ciborium", "dep:serde"]
json-serde = ["dep:serde_json", "dep:serde"]
toml-serde = ["dep:toml", "dep:serde"]

toml-preserve-order = ["toml?/preserve_order"]
json-preserve-order = ["serde_json?/preserve_order"]
json-float-roundtrip = ["serde_json?/float_roundtrip"]
json-arbitrary-precision = ["serde_json?/arbitrary_precision"]
json-raw-value = ["serde_json?/raw_value"]

# compression formats
bzip = ["compression", "dep:bzip2"]
flate = ["compression", "dep:flate2"]
xz = ["compression", "dep:xz2"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
