[package]
name = "singlefile"
version = "0.3.1"
authors = ["ScottyThePilot <scotty.codes@gmail.com>"]
description = "Dead simple file data manipulation."
documentation = "https://docs.rs/singlefile"
repository = "https://github.com/ScottyThePilot/singlefile"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.65"

[dependencies]
dunce = { version = "1.0.5" }
fs4 = { version = "0.13.1" }
fs-err2 = { package = "fs-err", version = "2", optional = true }
fs-err3 = { package = "fs-err", version = "3", optional = true }
thiserror = { version = "1.0" }

[dependencies.parking_lot]
version = "0.12"
features = ["arc_lock"]
optional = true

[dependencies.tokio]
version = "1"
features = ["rt"]
optional = true

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
singlefile-formats = { path = "../singlefile-formats", features = ["json-serde"] }
tempfile = "3.8"

[features]
# by default, tokio will use parking_lot
default = ["tokio-parking-lot"]

shared = ["dep:parking_lot", "tokio?/parking_lot"]
shared-async = ["dep:tokio", "tokio?/sync"]

fs-err = ["fs-err3"]
fs-err2 = ["dep:fs-err2", "fs4/fs-err2"]
fs-err3 = ["dep:fs-err3", "fs4/fs-err3"]
# enables the `deadlock_detection` feature for parking_lot, if present
deadlock-detection = ["parking_lot?/deadlock_detection"]
# enables the `parking_lot` feature for tokio, if present
tokio-parking-lot = ["tokio?/parking_lot"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
